--- a/GingaGame-MonoGame/GingaGame-MonoGame.csproj
+++ b/GingaGame-MonoGame/GingaGame-MonoGame.csproj
@@ -26,6 +26,9 @@
         <PackageReference Include="MonoGame.Framework.DesktopGL" Version="3.8.1.303"/>
         <PackageReference Include="MonoGame.Content.Builder.Task" Version="3.8.1.303"/>
     </ItemGroup>
+    <ItemGroup>
+      <Content Include="bin\Debug\net6.0\scores1.txt" />
+    </ItemGroup>
     <Target Name="RestoreDotnetTools" BeforeTargets="Restore">
         <Message Text="Restoring dotnet tools" Importance="High"/>
         <Exec Command="dotnet tool restore"/>
