Add game state handling and update screen methods
The game state handling feature was implemented to manage game over and scoring conditions. Modifications were also made to allow screen state updates. Additionally, collision management was updated to interact with this new game state handler. Changes were made across multiple files including new methods, adjustments of existing methods, and additional Myra UI library reference.

--- a/GingaGame-MonoGame/GingaGame-MonoGame.csproj
+++ b/GingaGame-MonoGame/GingaGame-MonoGame.csproj
@@ -25,6 +25,7 @@
     <ItemGroup>
         <PackageReference Include="MonoGame.Framework.DesktopGL" Version="3.8.1.303"/>
         <PackageReference Include="MonoGame.Content.Builder.Task" Version="3.8.1.303"/>
+        <PackageReference Include="Myra" Version="1.5.5"/>
     </ItemGroup>
     <ItemGroup>
         <Content Include="bin\Debug\net6.0\scores1.txt"/>
