--- a/GingaGame-MonoGame/GingaGame-MonoGame.csproj
+++ b/GingaGame-MonoGame/GingaGame-MonoGame.csproj
@@ -30,6 +30,9 @@
     <ItemGroup>
         <Content Include="bin\Debug\net6.0\scores1.txt"/>
     </ItemGroup>
+    <ItemGroup>
+      <Folder Include="Assets\" />
+    </ItemGroup>
     <Target Name="RestoreDotnetTools" BeforeTargets="Restore">
         <Message Text="Restoring dotnet tools" Importance="High"/>
         <Exec Command="dotnet tool restore"/>
